--- a/.docusaurus/docusaurus-plugin-content-docs/default/site-docs-02-js-ts-uniapp-常见问题-md-4c8.json
+++ b/.docusaurus/docusaurus-plugin-content-docs/default/site-docs-02-js-ts-uniapp-常见问题-md-4c8.json
@@ -18,7 +18,7 @@
     "permalink": "/docs/js&ts/uniapp/地图"
   },
   "next": {
-    "title": "常用ui",
-    "permalink": "/docs/js&ts/前端开发"
+    "title": "uniapp实现聊天功能",
+    "permalink": "/docs/js&ts/uniapp/聊天记录/发送语音"
   }
 }
