--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /node_modules/@docusaurus/theme-classic/
 !/node_modules/@docusaurus/theme-classic/lib/
 /node_modules/@docusaurus/theme-classic/lib/theme/
-!/node_modules/@docusaurus/theme-classic/lib/theme/DocItem/
+!/node_modules/@docusaurus/theme-classic/lib/theme/DocItem/*
 
 
 
